Adapt to current P4 version. Publish as plugin for mapzone.io
  - adapt to new GeoTools version (FeatureSource etc.)
  - rework download servlet code